k8s/conference-service-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: conference-service-srv
spec:
  type: NodePort
  selector:
    app: conference-service
  ports:
  - name: conference-service
    protocol: TCP
    port: 8080
    targetPort: 8080
