k8s/deployment-conference-management-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conference-management-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conference-management-service
  template:
    metadata:
      labels:
        app: conference-management-service
    spec:
      containers:
        - name: conference-management-service
          image: w1nt3rr/conference-management-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: conference-management-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: conference-management-service
  ports:
  - name: conference-management-service
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: platfromgrpc
    protocol: TCP
    port: 666
    targetPort: 666
