k8s/service-node_port_conference-management.yaml
apiVersion: v1
kind: Service
metadata:
  name: conference-management-service-srv
spec:
  type: NodePort
  selector:
    app: conference-management-service
  ports:
    - name: conference-management-service
      protocol: TCP
      port: 8080
      targetPort: 8080
