k8s/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: snowflake.com
      http:
        paths:
          - path: /api/Member
            pathType: Prefix
            backend:
              service:
                name: member-service-clusterip-srv
                port:
                  number: 8080
          - path: /api/Conference
            pathType: Prefix
            backend:
              service:
                name: conference-service-clusterip-srv
                port:
                  number: 8080
